--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
 version: '2.1'
+setup: true
 orbs:
   path-filtering: circleci/path-filtering@0.1.3
 workflows:
