--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -44,6 +44,5 @@ Resources:
 Outputs:
   ClusterName:
     Value: !Ref clustername
-    Description: Name of EKS Cluster
+    Description: Name of EKS Clusters
 
-    
