--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
 version: 2.1
 
 orbs:
@@ -11,7 +7,7 @@ workflows:
     jobs:
       - path-filtering/filter:
           base-revision: master
-          config-path: .circleci/continue_config.yml
+          configuration-path: .circleci/continue_config.yml
           mapping: |
             src/.* build-code true
             eks/.* build-eks true
