--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 version: 2.1
 
+setup: true
+
 orbs:
   path-filtering: circleci/path-filtering@0.1.3
 workflows:
@@ -7,7 +9,7 @@ workflows:
     jobs:
       - path-filtering/filter:
           base-revision: master
-          configuration-path: .circleci/continue_config.yml
+          config-path: .circleci/continue-config.yml
           mapping: |
             src/.* build-code true
             eks/.* build-eks true
