--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -41,8 +41,7 @@ Resources:
       Subnets:
         - subnet-009bbeaface6fa432
         - subnet-0ee152074337a0f3f
-Outputs:
-  ClusterName:
-    Value: !Ref clustername
-    Description: Name of EKS Cluster.
-
+# Outputs:
+#   ClusterName:
+#     Value: !Ref clustername
+#     Description: Name of EKS Cluster
