--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -17,8 +17,8 @@ jobs:
       - run:
           name: update eks cluster
           command: |
-            echo "Updating cloud formatino template"
-            cloudformation update-stack --stack-name eks --region us-east-2 --template-body file://eks/eks.yml
+            echo "Updating eks cluster..."
+            aws cloudformation update-stack --stack-name eks --region us-east-2 --template-body file://eks/eks.yml
   
   build:
     docker:
