--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -73,9 +73,9 @@ Resources:
     - Key: Name
       Value: !Sub '${AWS::StackName}-VPC'
   InternetGateway:
-    Type: "AWS::EC2::InternetGateway"
-    VPCGatewayAttachment:
-    Type: "AWS::EC2::VPCGatewayAttachment"
+    Type: AWS::EC2::InternetGateway
+  VPCGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
     Properties:
       InternetGatewayId: !Ref InternetGateway
       VpcId: !Ref VPC
