--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -41,8 +41,13 @@ jobs:
             . venv/bin/activate
             make install
             # Install hadolint
-            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-            chmod +x /bin/hadolint
+            sudo wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 
+            sudo chmod +x /bin/hadolint
+      - run:
+          name: run lint
+          command: |
+            . venv/bin/activate
+            make lint 
       - save_cache:
           paths:
             - ./venv
@@ -54,22 +59,31 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install kubectl
+          name: install kubectl 1.23.12
           command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-
+            wget https://dl.k8s.io/v1.23.12/kubernetes-client-linux-amd64.tar.gz
+            tar -zxvf kubernetes-client-linux-amd64.tar.gz
+            sudo install -o root -g root -m 0755 kubernetes/client/bin/kubectl /usr/local/bin/kubectl
       - run:
           name: update kubectl config
           command: |
             aws eks update-kubeconfig --region us-east-2 --name ekscluster
-
-# run lint!
+      # - run:
+      #     name: bulid and push image
+      #     command: |
+      #       aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
+      #       docker build -t project5 .
+      #       docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
+      #       docker push 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
       - run:
-          name: run lint
+          name: deploy image to eks cluster
           command: |
-            . venv/bin/activate
-            make lint 
+            kubectl create deploy project5 --image=145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
+
+
+kubectl create deploy project5 --image=145648833137.dkr.ecr.us-east-2.amazo
+naws.com/project5:latest
+
 
 workflows:
   build-infra:
