--- a/deployment.yml
+++ b/deployment.yml
@@ -19,3 +19,16 @@ spec:
         image: 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp-service-nodeport
+spec:
+  type: NodePort
+  selector:
+    app: myapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
