--- a/deployment.yml
+++ b/deployment.yml
@@ -23,13 +23,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service-loadbalancer
+  name: nlb-sample-service
+  namespace: nlb-sample-app
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
   type: LoadBalancer
   selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    app: myapp
