--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -333,10 +333,10 @@ Resources:
         DesiredSize: !Ref NumWorkerNodes
         MaxSize: !Ref NumWorkerNodesMax
       Labels:
-        Key1: blue
+        Key1: pool
       Subnets:
-        - !Ref PrivateSubnet01
-        - !Ref PrivateSubnet02
+        - !Ref PublicSubnet01
+        - !Ref PublicSubnet02
     DependsOn: [EKSCluster,NodeInstanceRole,NodeInstanceProfile]
 
 
