--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -18,7 +18,8 @@ jobs:
           name: update eks cluster
           command: |
             echo "Updating eks cluster..."
-            aws cloudformation deploy --stack-name eks --region us-east-2 --template-body file://eks/eks.yml --capabilities CAPABILITY_NAMED_IAM
+            # aws cloudformation deploy --stack-name eks --region us-east-2 --template-body file://eks/eks.yml --capabilities CAPABILITY_NAMED_IAM
+            aws cloudformation deploy --stack-name eks --region us-east-2 --template-file eks/eks.yml --capabilities CAPABILITY_NAMED_IAM
   
   build:
     docker:
