--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -187,6 +187,7 @@ Resources:
     Metadata:
       Comment: Subnet 01
     Properties:
+      MapPublicIpOnLaunch: true
       AvailabilityZone:
         Fn::Select:
         - '0'
@@ -204,6 +205,7 @@ Resources:
     Metadata:
       Comment: Subnet 02
     Properties:
+      MapPublicIpOnLaunch: true    
       AvailabilityZone:
         Fn::Select:
         - '1'
