--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -81,7 +81,7 @@ jobs:
           command: |
             kubectl apply -f deployment.yml
             kubectl get pods -l 'app=myapp' -o wide | awk {'print $1" " $3 " " $6'} | column -t
-            kubectl create -f clusterip.yaml
+            kubectl create -f green.yaml
             # kubectl expose deployment myapp-deployment  --type=ClusterIP  --name=app-service-cluster-ip
             # kubectl create deploy project5 --image=145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
             # podname=$(kubectl get pods | awk '{w=$1} END{print w}')
@@ -98,9 +98,9 @@ workflows:
 #    when: << pipeline.parameters.build-code >>
     jobs:
       - build
-      # - publish:
-      #    requires: 
-      #      - build
-      #    filters:
-      #      branches:
-      #        only: master
+      - publish:
+         requires: 
+           - build
+         filters:
+           branches:
+             only: master
