For next level of testing

--- a/eks/eks.yml
+++ b/eks/eks.yml
@@ -343,7 +343,7 @@ Resources:
     DependsOn: [EKSCluster,NodeInstanceRole,NodeInstanceProfile]
 
 
-  EKSNodegroupBlue:
+  EKSNodegroup:
     Type: 'AWS::EKS::Nodegroup'
     Properties:
       ClusterName: !Ref EKSClusterName
