--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -64,7 +64,7 @@ jobs:
           command: |
             yum -y install wget
             yum -y install tar
-            yum -y install gzip
+            yum -y install gzip.x86_64
             wget https://dl.k8s.io/v1.23.12/kubernetes-client-linux-amd64.tar.gz
             tar -zxvf kubernetes-client-linux-amd64.tar.gz
             sudo install -o root -g root -m 0755 kubernetes/client/bin/kubectl /usr/local/bin/kubectl
