--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -75,6 +75,7 @@ jobs:
       - run:
           name: bulid and push image
           command: |
+            yum update
             yum -y install docker
             usermod -a -G docker ec2-user
             whoami
