--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -84,6 +84,7 @@ jobs:
             device-mapper-persistent-data
             lvm2 
             yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+            sed -i 's/$releasever/7/g' /etc/yum.repos.d/docker-ce.repo
             yum install -y docker-ce
             usermod -a -G docker root
             id root
