--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -81,8 +81,8 @@ jobs:
             #yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
             #yum -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
             yum install -y yum-utils
-            device-mapper-persistent-data
-            lvm2 
+            #device-mapper-persistent-data
+            #lvm2 
             yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
             sed -i 's/$releasever/7/g' /etc/yum.repos.d/docker-ce.repo
             yum install -y docker-ce
