--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -56,18 +56,9 @@ jobs:
 
   publish:
     docker:
-      - image: amazon/aws-cli:latest
+      - image: cimg/aws:2022.09
     steps:
       - checkout
-      - run:
-          name: install kubectl 1.23.12
-          command: |
-            yum -y install wget
-            yum -y install tar
-            yum -y install gzip.x86_64
-            wget https://dl.k8s.io/v1.23.12/kubernetes-client-linux-amd64.tar.gz
-            tar -zxvf kubernetes-client-linux-amd64.tar.gz
-            install -o root -g root -m 0755 kubernetes/client/bin/kubectl /usr/local/bin/kubectl
       - run:
           name: update kubectl config
           command: |
@@ -75,21 +66,6 @@ jobs:
       - run:
           name: bulid and push image
           command: |
-            yum update
-            #amazon-linux-extras install docker -y             
-            #yum install -y yum-utils
-            #yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-            #yum -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
-            yum install -y yum-utils
-            #device-mapper-persistent-data
-            #lvm2 
-            yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-            sed -i 's/$releasever/7/g' /etc/yum.repos.d/docker-ce.repo
-            yum install -y docker-ce
-            usermod -a -G docker root
-            id root
-            newgrp docker
-            systemctl start docker.service            
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
             docker build -t project5 .
             docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
