--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -63,11 +63,11 @@ jobs:
           name: bulid and push image
           command: |
             whoami
-            usermod -a -G docker circleci
+            sudo usermod -a -G docker circleci
             id circleci
             newgrp docker
             service docker status
-            service docker start
+            sudo service docker start
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
             docker build -t project5 .
             docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
