--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -64,7 +64,7 @@ jobs:
           command: |
             sudo usermod -a -G docker circleci
             id circleci
-            sudo newgrp docker
+            #sudo newgrp docker
             service docker status
             sudo service docker start
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
