--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -57,7 +57,7 @@ jobs:
   publish:
     docker:
       - image: cimg/base:current
-    resource_class: xlarge
+    # resource_class: xlarge
     steps:
       - checkout
       - run:
