--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -54,30 +54,11 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-  publish:
+  deploy:
     docker:
-      - image: cimg/base:current
-    # resource_class: xlarge
+      - image: cimg/aws:2022.09
     steps:
       - checkout
-      - run:
-          name: install aws cli
-          command: |
-            sudo apt update
-            sudo apt install awscli
-      - run:
-          name: bulid and push image
-          command: |
-            whoami
-            sudo usermod -a -G docker circleci
-            id circleci
-            #sudo newgrp docker
-            service docker status
-            sudo service docker start
-            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
-            docker build -t project5 .
-            docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
-            docker push 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
       - run:
           name: update kubectl config
           command: |
@@ -96,7 +77,7 @@ workflows:
 #    when: << pipeline.parameters.build-code >>
     jobs:
       - build
-      - publish:
+      - deploy:
          requires: 
            - build
          filters:
