--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -21,11 +21,9 @@ jobs:
             # aws cloudformation deploy --stack-name eks --region us-east-2 --template-body file://eks/eks.yml --capabilities CAPABILITY_NAMED_IAM
             aws cloudformation deploy --stack-name eks --region us-east-2 --template-file eks/eks.yml --capabilities CAPABILITY_NAMED_IAM
   
-  build:
+  build-app:
     docker:
       - image: python:3.7.3-stretch
-        # working_directory: ~/repo
-
     steps:
       - checkout
 
@@ -53,7 +51,22 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-
+  build-docker:
+    docker:
+    - image: docker:17.05.0-ce-git
+    - run:
+        name: install aws cli
+        command: |
+          apk add --no-cach python3 py3-pip
+          pip3 install --upgrade pip
+          pip3 install --no-cache-dir awscli
+    - run:
+        name: build and push image
+        command: |
+          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
+          docker build -t project5 .
+          docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
+          docker push 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
   deploy:
     docker:
       - image: cimg/aws:2022.09
@@ -72,8 +85,9 @@ workflows:
     when: << pipeline.parameters.build-eks >>
     jobs:
       - infra
-  build-rest:
-#    when: << pipeline.parameters.build-code >>
+  build-docker:
+    when: << pipeline.parameters.build-docker >>
+  build-app:
     jobs:
       - build
       - deploy:
