--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -54,19 +54,22 @@ jobs:
   build-docker:
     docker:
     - image: docker:17.05.0-ce-git
-    - run:
-        name: install aws cli
-        command: |
-          apk add --no-cach python3 py3-pip
-          pip3 install --upgrade pip
-          pip3 install --no-cache-dir awscli
-    - run:
-        name: build and push image
-        command: |
-          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
-          docker build -t project5 .
-          docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
-          docker push 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --no-cache py-pip=9.0.0-r1
+            pip install \
+              docker-compose==1.12.0 \
+              awscli==1.11.76
+      - run:
+          name: build and push image
+          command: |
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 145648833137.dkr.ecr.us-east-2.amazonaws.com
+            docker build -t project5 .
+            docker tag project5:latest 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
+            docker push 145648833137.dkr.ecr.us-east-2.amazonaws.com/project5:latest
   deploy:
     docker:
       - image: cimg/aws:2022.09
