Add docker build staeps to pipeline

--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -90,6 +90,8 @@ workflows:
       - infra
   build-docker:
     when: << pipeline.parameters.build-docker >>
+    jobs:
+      - build-docker
   build-app:
     jobs:
       - build
