--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -64,8 +64,11 @@ jobs:
           command: |
             apk add --no-cache py-pip=9.0.0-r1
             pip install \
-              docker-compose==1.12.0 \
-              awscli==1.11.76
+              docker-compose==1.12.0
+            apk add --no-cach python3 py3-pip
+            pip3 install --upgrade pip
+            pip3 install --no-cache-dir awscli
+
       - run:
           name: build and push image
           command: |
