--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -62,11 +62,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache py-pip=9.0.0-r1
-            pip install \
-              docker-compose==1.12.0
             apk add --no-cach python3 py3-pip
             pip3 install --upgrade pip
+            pip3 install --no-cache-dir docker-compose
             pip3 install --no-cache-dir awscli
 
       - run:
@@ -97,7 +95,9 @@ workflows:
   build-dockerwf:
     when: << pipeline.parameters.build-docker >>
     jobs:
-      - dockerbuild
+      - dockerbuild:
+          requires: 
+           - build-app
   build-app:
     jobs:
       - build
