Add docker build staeps to pipeline

--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -95,9 +95,7 @@ workflows:
   build-dockerwf:
     when: << pipeline.parameters.build-docker >>
     jobs:
-      - dockerbuild:
-          requires: 
-           - build-app
+      - dockerbuild
   build-app:
     jobs:
       - build
