--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -56,7 +56,7 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
   dockerbuild:
     docker:
-    - image: docker:17.05.0-ce-git
+    - image: docker:latest
     steps:
       - checkout
       - run:
