--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -62,7 +62,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt install awscli
+            sudo apt install awscli
             #apk add --no-cach python3 py3-pip
             #pip3 install --upgrade pip
             #pip3 install --no-cache-dir docker-compose
